--- a/src/styles/queries/md-900px.sass
+++ b/src/styles/queries/md-900px.sass
@@ -21,27 +21,37 @@
       font-size: 14px 
 
   .services-section 
-    padding: 80px 0
+    padding: 50px 0
     .service-list 
       grid-template-columns: 1fr 1fr
       gap: 30px
 
   .about-section 
+    padding: 50px 0
+
     .container
       grid-template-columns: 1fr
-
+      gap: 50px
+    
     .about-text
       max-width: 100%
 
+    .statistics 
+      margin-top: 50px
+
+    .stats
+      .stats-number 
+        font-size: 30px
+
   .section-featured
-    padding: 80px 0
+    padding: 50px 0
 
     .featured-works-list
       grid-template-columns: 1fr
       gap: 30px
 
   .section-testimonial 
-    padding: 80px 0
+    padding: 50px 0
 
     .testimonials 
       grid-template-columns: 1fr
