--- a/src/styles/queries/sm-600px.sass
+++ b/src/styles/queries/sm-600px.sass
@@ -27,6 +27,11 @@
     .partner-list 
       flex-direction: column
 
+  .about-section
+    h1
+      font-size: 25px
+      line-height: 40px
+
   .services-section 
     .service-list 
       grid-template-columns: 1fr
